--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -8,3 +8,4 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_executable(Compiler main.cpp)
+add_executable(DomTree dom_tree_test.cpp)
